--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -2,8 +2,10 @@
 
 one:
   title: MyString
-  body: MyText
+  content: MyText
+  category: MyString
 
 two:
   title: MyString
-  body: MyText
+  content: MyText
+  category: MyString
